--- a/desktop.html
+++ b/desktop.html
@@ -70,7 +70,7 @@
                         <div class="collapse" id="collapseExample2">
                             <ul class="list-unstyled bg-black p-3 rounded-bottom rounded-end">
                                 <li>
-                                    <a href="#">
+                                    <a href="our_brands.html">
                                         Our Brands
                                     </a>
                                 </li>
